# squid

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  squid-readme.cabal  squid.cabal
.github/workflows/: haskell.yml  linter.yml
squid-core/: CHANGELOG.md  README.md  squid-core.cabal
squid-core/src/Squid/: Client.hs  DataBase.hs  Prelude.hs
squid-core/src/Squid/Client/: Commands.hs  EvalSql.hs  HasExecution.hs  HasQuerying.hs  Migration.hs  Operators.hs  RunClient.hs  SqlWriter.hs
squid-core/src/Squid/DataBase/: Column.hs  Entity.hs  HasEntities.hs  HasEntity.hs  HasFieldValues.hs  HasNumericalType.hs  HasSqlField.hs  HasSqlType.hs  SqlColumn.hs  SqlCommands.hs  SqlStatement.hs  Table.hs  TypeLevel.hs
squid-postgres/: CHANGELOG.md  README.md  squid-postgres.cabal
squid-postgres/example/: Main.hs
squid-postgres/src/Squid/: Postgres.hs
squid-postgres/src/Squid/Postgres/: Entity.hs  Field.hs  Migration.hs  SqlConfig.hs  SqlPersist.hs  SqlWriter.hs
squid-postgres/test/Squid/: SuccessSpec.hs
src/Data/: Squid.hs
src/DataBase/: Column.hs  Corec.hs  Example.hs  HasEntity.hs  HasSqlValue.hs  Internal.hs  PersistTypes.hs  RunSql.hs  Sql.hs  Squid.hs  Table.hs  TypeLevel.hs
src/DataBase/Internal/: HasEntity.hs  HasSqlValue.hs  Operators.hs  PersistEntity.hs  PersistTypes.hs  RunSql.hs  Sql.hs  Table.hs  TypeLevel.hs
src/DataBase/Squid/Internal/: Sql.hs  SqlPersist.hs
test/Squid/: FailSpec.hs  SuccessSpec.hs  Util.hs
