cabal-version: >= 2.0
name:           squid-readme
version:        0.1.0.0
synopsis:       Readme test
description:    Readme test
homepage:       https://github.com/epicallan/squid.git#readme
bug-reports:    https://github.com/epicallan/squid.git/issues
author:         Lukwago Allan <epicallan.al@gmail>
maintainer:     Lukwago Allan <epicallan.al@gmail>
license:        MIT
license-file:   LICENSE.md
tested-with:
   GHC  ==8.8.4
    ||  ==8.10.3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/epicallan/squid.git

test-suite readme
  build-depends:
      base  >= 4.10.1 && < 5
    , squid-postgres
  main-is:             README.lhs
  type:                exitcode-stdio-1.0
  ghc-options:         -pgmL markdown-unlit
  build-tool-depends:  markdown-unlit:markdown-unlit
  default-language:    Haskell2010
