cabal-version: >= 2.0
name:           squid
version:        0.0.0.1
synopsis:       A type dependent highlevel http request library inspired by servant-client.
description:    A type dependent highlevel http request library inspired by servant-client.
category:       Network, Web
homepage:       https://github.com/epicallan/squid.git#readme
bug-reports:    https://github.com/epicallan/squid.git/issues
author:         Lukwago Allan <epicallan.al@gmail>
maintainer:     Lukwago Allan <epicallan.al@gmail>
license:        MIT
license-file:   LICENSE.md
extra-doc-files: CHANGELOG.md, README.md
tested-with:
   GHC  ==8.2.2
    ||  ==8.4.4
    ||  ==8.6.5
    ||  ==8.8.1
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/epicallan/squid.git

library
  exposed-modules:
      Data.Squid
  default-extensions: LambdaCase DeriveGeneric FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes PolyKinds DataKinds KindSignatures ViewPatterns UndecidableInstances StrictData
  build-depends:
    base                 >= 4.10.1 && < 5,
    base-compat          >= 0.10.5 && < 0.13,
    aeson                >= 1.4.5 && < 1.5,
    bytestring           >= 0.10.8 && < 0.11,
    text                 >= 1.2.4 && < 1.3,
    mtl                  >= 2.2.2 && < 3.0,
    monad-control        >= 1.0.2 && < 1.1,
    safe-exceptions      >= 0.1.7 && < 0.2,
    string-conversions   >= 0.4.0 && < 0.5
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -fhide-source-paths
    -freverse-errors
    -Wpartial-fields

  hs-source-dirs: src
  default-language: Haskell2010

test-suite readme
  build-depends:
      base  >= 4.10.1 && < 5
    , aeson >= 1.4.5 && < 1.5
    , squid
  main-is:             README.lhs
  type:                exitcode-stdio-1.0
  ghc-options:         -pgmL markdown-unlit -Wall
  build-tool-depends:  markdown-unlit:markdown-unlit
  default-language:    Haskell2010

test-suite spec

  build-depends:
      base       >= 4.10.1 && < 5
    , aeson      >= 1.4.5  && < 1.5
    , hspec      >= 2.6.0  && < 2.8
    , squid
    , QuickCheck >= 2.12.6 && < 2.14
  main-is:             Spec.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  other-modules:
      Squid.FailSpec
    , Squid.SuccessSpec
    , Squid.Util
  build-tool-depends:  hspec-discover >= 2.6.0 && <2.8
  default-language:    Haskell2010
