cabal-version: >= 2.0
name:           squid-core
version:        0.1.0.0
synopsis:       A type safe SQL EDSL inspired by Persistent-Esqueleto
description:    Core functionality implementation for Squid, a type safe SQL EDSL replicating the Persistent-Esqueleto Query API while not using Template Haskell.
category:       SQL, EDSL
homepage:       https://github.com/epicallan/squid.git#readme
bug-reports:    https://github.com/epicallan/squid.git/issues
author:         Lukwago Allan <epicallan.al@gmail>
maintainer:     Lukwago Allan <epicallan.al@gmail>
license:        MIT
license-file:   LICENSE.md
extra-doc-files: CHANGELOG.md, README.md
tested-with:
   GHC  ==8.6.5
    ||  ==8.8.1
    ||  ==8.4.4
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/epicallan/squid.git

library
  exposed-modules:
      Squid.Client
    , Squid.DataBase
    , Squid.Client.Commands
    , Squid.Client.Operators
    , Squid.Client.RunClient
    , Squid.DataBase.Column
    , Squid.DataBase.Entity
    , Squid.DataBase.HasEntity
    , Squid.DataBase.HasSqlField
    , Squid.DataBase.SqlCommands
    , Squid.DataBase.SqlStatement
    , Squid.DataBase.Table
    , Squid.DataBase.TypeLevel
  default-extensions: LambdaCase DeriveGeneric FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes PolyKinds DataKinds KindSignatures ViewPatterns UndecidableInstances StrictData
  build-depends:
    base                 >= 4.10.1 && < 5,
    base-compat          >= 0.10.5 && < 0.13,
    aeson                >= 1.4.5 && < 1.5,
    bytestring           >= 0.10.8 && < 0.11,
    text                 >= 1.2.4 && < 1.3,
    free                 >= 5.0.0 && < 6.0.0,
    mtl                  >= 2.2.2 && < 3.0,
    monad-control        >= 1.0.2 && < 1.1,
    safe-exceptions      >= 0.1.7 && < 0.2,
    string-conversions   >= 0.4.0 && < 0.5
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -fhide-source-paths
    -freverse-errors
    -Wpartial-fields

  hs-source-dirs: src
  default-language: Haskell2010
