cabal-version: >= 2.0
name:           squid-core
version:        0.1.0.0
synopsis:       A type safe SQL EDSL inspired by Persistent-Esqueleto
description:    Core functionality implementation for Squid, a type safe SQL EDSL replicating the Persistent-Esqueleto Query API while not using Template Haskell.
category:       SQL, EDSL
homepage:       https://github.com/epicallan/squid.git#readme
bug-reports:    https://github.com/epicallan/squid.git/issues
author:         Lukwago Allan <epicallan.al@gmail>
maintainer:     Lukwago Allan <epicallan.al@gmail>
license:        MIT
license-file:   LICENSE.md
extra-doc-files: CHANGELOG.md, README.md
tested-with:
   GHC  ==8.8.4
    ||  ==8.10.3

build-type:     Simple

source-repository head
  type: git
  location: https://github.com/epicallan/squid.git

library
  exposed-modules:
      Squid.Client
    , Squid.DataBase
    , Squid.Prelude
    , Squid.Client.Operators
    , Squid.Client.RunClient
    , Squid.Client.HasQuerying
    , Squid.DataBase.HasFieldValues
    , Squid.DataBase.HasEntity
    , Squid.DataBase.HasNumericalType
    , Squid.DataBase.HasEntities
    , Squid.DataBase.SqlCommands
    , Squid.DataBase.SqlStatement
    , Squid.DataBase.Table
    , Squid.DataBase.TypeLevel
    , Squid.Client.Migration
    , Squid.Client.EvalSql
    , Squid.Client.HasExecution
    , Squid.DataBase.HasSqlType
    , Squid.Client.SqlWriter
    , Squid.DataBase.SqlColumn

  default-extensions: LambdaCase DeriveGeneric DefaultSignatures DeriveFunctor  DerivingVia FlexibleInstances
    FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses
    RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs
    GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes
    PolyKinds DataKinds KindSignatures ViewPatterns UndecidableInstances InstanceSigs
    StrictData AllowAmbiguousTypes
  build-depends:
      base                 >= 4.10.1 && < 5
    , aeson
    , bytestring
    , text
    , free
    , mtl
    , monad-control
    , safe-exceptions
    , singleton-bool
    , string-conversions
    , unordered-containers
    , vinyl
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -fhide-source-paths
    -freverse-errors
    -Wpartial-fields

  hs-source-dirs: src
  default-language: Haskell2010
