cabal-version: >= 2.0
name:           squid-postgres
version:        0.1.0.0
synopsis:       A type safe SQL EDSL inspired by Persistent-Esqueleto
description:    A type dependent highlevel http request library inspired by servant-client.
category:       SQL, EDSL, Postgres
homepage:       https://github.com/epicallan/squid.git#readme
bug-reports:    https://github.com/epicallan/squid.git/issues
author:         Lukwago Allan <epicallan.al@gmail>
maintainer:     Lukwago Allan <epicallan.al@gmail>
license:        MIT
license-file:   LICENSE.md
extra-doc-files: CHANGELOG.md, README.md
tested-with:
   GHC  ==8.6.5
    ||  ==8.8.1
    ||  ==8.4.4
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/epicallan/squid.git

library
  exposed-modules:
      Squid.Postgres
    , Squid.Postgres.Entity
    , Squid.Postgres.SqlConfig
    , Squid.Postgres.SqlPersist
    , Squid.Postgres.SqlWriter
  default-extensions: LambdaCase DeriveGeneric FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes PolyKinds DataKinds KindSignatures ViewPatterns UndecidableInstances StrictData
  build-depends:
    base                 >= 4.10.1 && < 5,
    base-compat          >= 0.10.5 && < 0.13,
    bytestring           >= 0.10.8 && < 0.11,
    exceptions           >= 0.10.0 && < 0.11,
    free                 >= 5.0.0 && < 6.0.0,
    mtl                  >= 2.2.2 && < 3.0,
    postgresql-simple    >= 0.5   && < 0.7,
    squid-core           >=0.1.0.0,
    retry                >= 0.8   && < 0.9,
    text                 >= 1.2.4 && < 1.3,
    unliftio-core        >= 0.1.2 && < 0.2.0
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -fhide-source-paths
    -freverse-errors
    -Wpartial-fields

  hs-source-dirs: src
  default-language: Haskell2010

executable example
  main-is: Main.hs
  hs-source-dirs: example
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions: LambdaCase DeriveGeneric FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes PolyKinds DataKinds KindSignatures ViewPatterns UndecidableInstances StrictData
  build-depends:
      base >= 4.10.1 && < 5
    , squid-postgres
    , text  >= 1.2.4 && < 1.3

test-suite spec
  build-depends:
      base       >= 4.10.1 && < 5
    , aeson      >= 1.4.5  && < 1.5
    , hspec      >= 2.6.0  && < 2.8
    , squid-postgres
    , QuickCheck >= 2.12.6 && < 2.14
  main-is:             Spec.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  build-tool-depends:
      hspec-discover:hspec-discover >= 2.6.0 && <2.8
  default-language:    Haskell2010
