cabal-version: >= 2.0
name:           squid-postgres
version:        0.1.0.0
synopsis:       A type safe SQL EDSL inspired by Persistent-Esqueleto
description:    A type dependent highlevel http request library inspired by servant-client.
category:       SQL, EDSL, Postgres
homepage:       https://github.com/epicallan/squid.git#readme
bug-reports:    https://github.com/epicallan/squid.git/issues
author:         Lukwago Allan <epicallan.al@gmail>
maintainer:     Lukwago Allan <epicallan.al@gmail>
license:        MIT
license-file:   LICENSE.md
extra-doc-files: CHANGELOG.md, README.md
tested-with:
   GHC  == 8.8.4
    ||  ==8.10.3

build-type:     Simple

source-repository head
  type: git
  location: https://github.com/epicallan/squid.git

library
  exposed-modules:
      Squid.Postgres
    , Squid.Postgres.Migration
    , Squid.Postgres.Entity
    , Squid.Postgres.Field
    , Squid.Postgres.SqlConfig
    , Squid.Postgres.SqlPersist

  default-extensions: LambdaCase DerivingStrategies OverloadedLabels DeriveGeneric DeriveAnyClass DefaultSignatures DeriveFunctor  DerivingVia FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes PolyKinds DataKinds KindSignatures ViewPatterns UndecidableInstances InstanceSigs StrictData AllowAmbiguousTypes
  build-depends:
      base                 >= 4.10.1 && < 5
    , bytestring
    , exceptions
    , free
    , mtl
    , postgresql-simple
    , squid-core
    , retry
    , text
    , unliftio-core
    , unordered-containers
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -fhide-source-paths
    -freverse-errors
    -Wpartial-fields

  hs-source-dirs: src
  default-language: Haskell2010

executable example
  main-is: Main.hs
  hs-source-dirs: example
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions: LambdaCase DerivingStrategies OverloadedLabels DeriveGeneric DeriveAnyClass DefaultSignatures DeriveFunctor  DerivingVia FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes PolyKinds DataKinds KindSignatures ViewPatterns UndecidableInstances InstanceSigs StrictData AllowAmbiguousTypes
  build-depends:
      base >= 4.10.1 && < 5
    , squid-postgres
    , text

test-suite spec
  build-depends:
      base       >= 4.10.1 && < 5
    , aeson
    , hspec
    , squid-postgres
  main-is:             Spec.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  build-tool-depends:
      hspec-discover:hspec-discover >= 2.6.0
  default-language:    Haskell2010
